[gd_scene load_steps=2 format=3]

[ext_resource type="Script" path="res://addons/diablohumastudio/database_manager/ui/tables_editor/property_editor_row.gd" id="1"]

[node name="PropertyEditorRow" type="HBoxContainer"]
script = ExtResource("1")

[node name="NameLabel" type="Label" parent="."]
custom_minimum_size = Vector2(45, 0)
text = "Name:"

[node name="PropertyNameEdit" type="LineEdit" parent="."]
unique_name_in_owner = true
custom_minimum_size = Vector2(150, 0)
size_flags_horizontal = 3
placeholder_text = "property_name"

[node name="TypeLabel" type="Label" parent="."]
custom_minimum_size = Vector2(40, 0)
text = "Type:"

[node name="PropertyTypeOption" type="OptionButton" parent="."]
unique_name_in_owner = true
custom_minimum_size = Vector2(130, 0)

[node name="DefaultLabel" type="Label" parent="."]
custom_minimum_size = Vector2(55, 0)
text = "Default:"

[node name="DefaultValueContainer" type="HBoxContainer" parent="."]
unique_name_in_owner = true
custom_minimum_size = Vector2(150, 0)
size_flags_horizontal = 3

[node name="RemoveBtn" type="Button" parent="."]
unique_name_in_owner = true
custom_minimum_size = Vector2(30, 0)
text = "X"
